# cable-robot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  backup_list.txt  package.xml  workspace.code-workspace
Firmware/: README.md  backup_list.txt  cheatsheet.md  nodes.md  odrive-config_0.json  odrive-config_1.json  rosSystem.h
Firmware/AIR_markers/: AIR_markers.ino  command_parser.h  end_effector.h
Firmware/bluetooth_configure/: bluetooth_configure.ino
Firmware/configs/: 2019-12-9_odrv1.json  2020-11-29_odrv0.json  2020-11-29_odrv1.json  2020-11-30_odrv0.json  2021-08-23-new_odrv0.json  2021-08-23_odrv0.json  2021-08-24-new_odrv1.json  2021-08-24_odrv1.json  2021-11-20_odrv0_1.json  2021-11-20_odrv1.json
Firmware/gerry00_roscan/: gerry00_roscan.ino  odrvCan.h  rosAxis.h
Firmware/gerry01_home/: CableController.h  gerry01_home.ino  odrvCan.h  params.h  rosAxis.h
Firmware/gerry02_allmotors/: CableController.h  gerry02_allmotors.ino  odrvCan.h  rosAxis.h
Firmware/gerry03_python/: can_simple.h  enums.py  gerry03_python.ino  gui.py  main.py  mySerial.py  robot.py  testSerial.py
Firmware/gerry04_mcu_pos/: Controller.cpp  Controller.h  DataTypes.cpp  DataTypes.h  ODriveComm.cpp  OdriveComm.h  SerialComm.cpp  SerialComm.h  can_simple.h  can_simple.py  gerry04_mcu_pos.ino  gui.py  main.py  mySerial.py  robot.py
Firmware/gerry06_mcu_only/: README.md  can_utils.h  gerry06_mcu_only.ino  kinematic_utils.h  serial.h
Firmware/gerry07_mcu_only_t4/: IROS.h  gerry07_mcu_only_t4.ino  kinematic_utils.h  serial.h  step.h
Firmware/gerry08_iLQR_t4/: .gitattributes  can_simple.h  can_utils.h  gerry08_iLQR_t4.ino  kinematic_utils.h  serial.h
Firmware/gerry09_iLQR_t4/: .gitattributes  CMakeLists.txt  PackingList.md  README.md  SOP.md  arduino_test_utils.h  byte_packing.h  byte_packing_test.cpp  constants.h  crc.h  crc_test.cpp  fibre_protocol.h  fibre_protocol_test.cpp  gerry09_iLQR_t4.ino  kinematics.h  kinematics_test.cpp  robot.h  utils.h  utils_test.cpp  winch.h  winch_test.cpp
Firmware/gerry09_iLQR_t4/CppUnitLite/: CMakeLists.txt  Test.cpp  Test.h
Firmware/gerry09_iLQR_t4/can_utils_test/: can_utils.h  can_utils_test.ino
Firmware/gerry09_iLQR_t4/communication/: CMakeLists.txt  byte_packing_test.cpp  can_utils.h  crc.h  crc_test.cpp  debug.h  fibre_protocol.h  fibre_protocol_test.cpp  odrive_can.h
Firmware/gerry09_iLQR_t4/communication/can_utils_test/: can_simple.h  can_utils.h  can_utils_test.ino
Firmware/gerry09_iLQR_t4/controllers/: controller_dummy.h  controller_interface.h
Firmware/gerry09_iLQR_t4/odrive_can_test/: can_simple.h  odrive_can.h  odrive_can_test.ino
Firmware/gerry09_iLQR_t4/src/: CMakeLists.txt  Vector.h  Vector_test.cpp  arm.h  constants.h  cp_code.sh  estop.h  kinematics.h  kinematics_test.cpp  pid.h  robot.h  spline.h  spline_test.cpp  spray.h  utils.h  utils_test.cpp  winch.h  winch_test.cpp
Firmware/gerry09_iLQR_t4/src/communication/: CMakeLists.txt  ascii_parser.h  ascii_parser_test.cpp  byte_packing.h  byte_packing_test.cpp  can_simple.h  can_utils.h  cdpr_serial_commands.h  controller_input.h  crc.h  crc_test.cpp  debug.h  debug_test.cpp  fibre_protocol-impl.h  fibre_protocol.h  fibre_protocol_test.cpp  odrive_can.h  slave.h
Firmware/gerry09_iLQR_t4/src/controllers/: CMakeLists.txt  controller_dummy.h  controller_gouttefarde.h  controller_gouttefarde_tracking.h  controller_ilqr.h  controller_interface.h  controller_lqg.h  controller_simple.cpp  controller_simple.h  controller_switchable.h  controller_tracker_setpoint.h  controller_tracking.h  controller_tracking_spline.h  setpoint_basic.h  setpoint_basic_test.cpp  setpoint_interface.h  setpoint_pure_pursuit.h  setpoint_pure_pursuit_test.cpp  setpoint_spline.h  setpoint_spline_test.cpp  setpoint_waypoints.h  tracker_gouttefarde.h  tracker_gouttefarde_test.cpp  tracker_interface.h  tracker_interface_test.cpp  tracker_safe.h  tracker_safe_test.cpp
Firmware/gerry09_iLQR_t4/src/state_estimators/: state_estimator_first_order.h  state_estimator_interface.h  state_estimator_kf.h
Firmware/gerry09_iLQR_t4/state_estimators/: state_estimator_interface.h  state_estimator_naive_firstorder.h
Firmware/gerry09_iLQR_t4/trajectories/: ATL_controller_1e2.h  ATL_controller_1e2_1mps.h  ATL_controller_1e2_static.h
Firmware/gerry09_iLQR_t4/unit_test_simulator/: CMakeLists.txt  Stream.h  arduino_test_utils.cpp  arduino_test_utils.h  odrive_dummy.h  ostreams.h  state_estimator_dummy.h  test_runner.h  test_runner_test.cpp
Firmware/gerry09_iLQR_t4/unit_test_simulator/Metro/: CMakeLists.txt  Metro.cpp
Firmware/james04_debug/: ds.h  james04_debug.ino  odrvCan.h  params.h  rosAxis.h  rosSystem.h  util.h
Firmware/sprayCan/: sprayCan.ino
FlexCAN/: FlexCAN.cpp
analysis/gerry00_estimation/: 13_concentric_diamonds_1mps_cal.csv  13_concentric_diamonds_1mps_cal.txt  calibrate_orig.py  main.py  rot_x-y-z_(y=gravity).csv
control/: controller.py  gerry00_roscan.py  gerry01_replayMotion.py  gerry02_allMotorsReplay.py  test_controller.py
docs/: SOP.md  SOP_TEDx.html  SOP_TEDx.md
launch/: base.launch
simulation/: CMakeLists.txt  CableFactor.h  JointLimitFactor.h  LQRFactorGraph.cpp  LQRFactorGraph.h  LinearDynamicsFactor.h  MotorFactor.h  PositioningFactorGraph.h  SignedDistanceField.cpp  SignedDistanceField.h  WrenchFactor.h  testCableFactor.cpp  testWrenchFactor.cpp  test_positioning.cpp  utils.cpp  utils.h
simulation/factors/: CableFactor.h  JointLimitFactor.h  LinearDynamicsFactor.h  MotorFactor.h  WinchFactor.h  WrenchFactor.h
simulation/robot/: LQRFactorGraph.cpp  LQRFactorGraph.h  PositioningFactorGraph.cpp  PositioningFactorGraph.h
simulation/scripts/: CMakeLists.txt  james00_posTest.cpp
simulation/tests/: CMakeLists.txt  testCableFactor.cpp  testMotorFactor.cpp  testPositioningFactorGraph.cpp  testWinchFactor.cpp  testWrenchFactor.cpp
simulation/util/: utils.cpp  utils.h
site/: README.md  arm.js  cdpr.js  drawing.js  gamepad.js  index.html  ipad.js  logfile.js  main.js  output.js  paint_interface.js  serial.js  serial_over_ws.js  spray.js  style.css
site/ws_test_site/: index.html  (+2 more)
(+107 files in other folders)
